// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/advanced_create_post Show tutorial 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot for center textbox 1`] = `
<form
  className="center"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot when cannot post 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={false}
    canUploadFiles={true}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot when file upload disabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={false}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, can post; preview disabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, can post; preview enabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, cannot post; preview disabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={false}
    canUploadFiles={true}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, cannot post; preview enabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={false}
    canUploadFiles={true}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, init 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, post priority disabled, with priority important 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "metadata": Object {
          "priority": Object {
            "priority": "important",
          },
        },
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, post priority enabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={
      Array [
        <Memo(PostPriorityPickerOverlay)
          disabled={false}
          onApply={[Function]}
          onClose={[Function]}
        />,
      ]
    }
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, post priority enabled, with priority important 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={
      Array [
        <Memo(PostPriorityPickerOverlay)
          disabled={false}
          onApply={[Function]}
          onClose={[Function]}
          settings={
            Object {
              "priority": "important",
            }
          }
        />,
      ]
    }
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={true}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    currentChannel={
      Object {
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "type": "O",
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "fileInfos": Array [],
        "message": "",
        "metadata": Object {
          "priority": Object {
            "priority": "important",
          },
        },
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleKeyDown={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    labels={
      <Memo(PriorityLabels)
        canRemove={true}
        hasError={false}
        onRemove={[Function]}
        priority="important"
        specialMentions={
          Object {
            "all": false,
            "channel": false,
            "here": false,
          }
        }
      />
    }
    location="CENTER"
    maxPostSize={4000}
    message=""
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;
